// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oas operation openapi v2 1`] = `
Array [
  Object {
    "description": "",
    "extensions": Object {
      "x-another": Object {
        "property": "value",
      },
      "x-test": true,
    },
    "id": "http_operation-abc-post-/pets",
    "iid": "addPet",
    "method": "post",
    "path": "/pets",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "examples": Array [],
            "id": "http_media-http_request_body-http_operation-abc-post-/pets-application/json",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                  "x-stoplight": Object {
                    "explicitProperties": Array [
                      "type",
                      "format",
                    ],
                  },
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Pet",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "examples": Array [],
            "id": "http_media-http_request_body-http_operation-abc-post-/pets-application/xml",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                  "x-stoplight": Object {
                    "explicitProperties": Array [
                      "type",
                      "format",
                    ],
                  },
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Pet",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "http_request_body-http_operation-abc-post-/pets",
        "name": "body",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Invalid input",
        "headers": Array [],
        "id": "http_response-http_operation-abc-post-/pets-405-application/json-application/xml",
      },
    ],
    "security": Array [
      Array [
        Object {
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "http_security-abc-petstore_auth",
          "key": "petstore_auth",
          "type": "oauth2",
        },
      ],
    ],
    "servers": Array [
      Object {
        "id": "http_server-abc-https://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "http_server-abc-http://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Add a new pet to the store",
    "tags": Array [
      Object {
        "id": "tag-pet",
        "name": "pet",
      },
    ],
  },
  Object {
    "extensions": Object {},
    "id": "http_operation-abc-get-/pets",
    "method": "get",
    "path": "/pets",
    "request": Object {
      "cookie": Array [],
      "headers": Array [
        Object {
          "id": "http_header-abc-rate-limit",
          "name": "Rate-Limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_header-abc-rate-limit-",
            },
          },
          "style": "simple",
        },
      ],
      "path": Array [],
      "query": Array [
        Object {
          "id": "http_query-abc-skip",
          "name": "skip",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_query-abc-skip-",
            },
          },
          "style": "form",
        },
        Object {
          "id": "http_query-abc-limit",
          "name": "limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_query-abc-limit-",
            },
          },
          "style": "form",
        },
      ],
    },
    "responses": Array [
      Object {
        "code": "200",
        "contents": Array [],
        "description": "",
        "headers": Array [],
        "id": "http_response-http_operation-abc-get-/pets-200",
      },
    ],
    "security": Array [],
    "servers": Array [
      Object {
        "id": "http_server-abc-https://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "http_server-abc-http://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "List pets",
    "tags": Array [],
  },
  Object {
    "extensions": Object {},
    "id": "http_operation-abc-options-/pets",
    "method": "options",
    "path": "/pets",
    "request": Object {
      "cookie": Array [],
      "headers": Array [
        Object {
          "id": "http_header-abc-rate-limit",
          "name": "Rate-Limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_header-abc-rate-limit-",
            },
          },
          "style": "simple",
        },
      ],
      "path": Array [],
      "query": Array [
        Object {
          "id": "http_query-abc-skip",
          "name": "skip",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_query-abc-skip-",
            },
          },
          "style": "form",
        },
        Object {
          "id": "http_query-abc-limit",
          "name": "limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_query-abc-limit-",
            },
          },
          "style": "form",
        },
      ],
    },
    "responses": Array [
      Object {
        "code": "200",
        "contents": Array [],
        "description": "",
        "headers": Array [
          Object {
            "description": "Allowed clients",
            "id": "http_header-http_response-http_operation-abc-options-/pets-200-Allow",
            "name": "Allow",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "type": "string",
              "x-stoplight": Object {
                "id": "schema-http_header-http_response-http_operation-abc-options-/pets-200-Allow-",
              },
            },
            "style": "simple",
          },
          Object {
            "description": "Remaining requests",
            "id": "http_header-http_response-http_operation-abc-options-/pets-200-X-Rate-Limit",
            "name": "X-Rate-Limit",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "format": "int64",
              "maximum": 9223372036854776000,
              "minimum": -9223372036854776000,
              "type": "number",
              "x-stoplight": Object {
                "explicitProperties": Array [
                  "type",
                  "format",
                ],
                "id": "schema-http_header-http_response-http_operation-abc-options-/pets-200-X-Rate-Limit-",
              },
            },
            "style": "simple",
          },
        ],
        "id": "http_response-http_operation-abc-options-/pets-200",
      },
    ],
    "security": Array [],
    "servers": Array [
      Object {
        "id": "http_server-abc-https://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "http_server-abc-http://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "List pets",
    "tags": Array [],
  },
  Object {
    "description": "",
    "extensions": Object {},
    "id": "http_operation-abc-delete-/pets",
    "method": "delete",
    "path": "/pets",
    "request": Object {
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "400",
        "contents": Array [],
        "description": "Invalid ID supplied",
        "headers": Array [],
        "id": "http_response-http_operation-abc-delete-/pets-400",
      },
      Object {
        "code": "404",
        "contents": Array [],
        "description": "Pet not found",
        "headers": Array [],
        "id": "http_response-http_operation-abc-delete-/pets-404",
      },
    ],
    "security": Array [],
    "servers": Array [
      Object {
        "id": "http_server-abc-https://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "http_server-abc-http://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Deletes a pet",
    "tags": Array [],
  },
  Object {
    "description": "",
    "extensions": Object {},
    "id": "http_operation-abc-put-/pet/{}",
    "iid": "updatePet",
    "method": "put",
    "path": "/pet/{petId}",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "examples": Array [],
            "id": "http_media-http_request_body-http_operation-abc-put-/pet/{}-application/json",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                  "x-stoplight": Object {
                    "explicitProperties": Array [
                      "type",
                      "format",
                    ],
                  },
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Pet",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "examples": Array [],
            "id": "http_media-http_request_body-http_operation-abc-put-/pet/{}-application/xml",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                  "x-stoplight": Object {
                    "explicitProperties": Array [
                      "type",
                      "format",
                    ],
                  },
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Pet",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "http_request_body-http_operation-abc-put-/pet/{}",
        "name": "body",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [
        Object {
          "id": "http_path_param-abc-pet-id",
          "name": "petId",
          "required": true,
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_path_param-abc-pet-id-",
            },
          },
          "style": "simple",
        },
      ],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "400",
        "contents": Array [],
        "description": "Invalid ID supplied",
        "headers": Array [],
        "id": "http_response-http_operation-abc-put-/pet/{}-400-application/json-application/xml",
      },
      Object {
        "code": "404",
        "contents": Array [
          Object {
            "examples": Array [],
            "id": "http_media-http_response-abc-404-application/json-application/xml-application/xml",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "code": Object {
                  "type": "string",
                },
                "message": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "code",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Error",
              },
            },
          },
          Object {
            "examples": Array [],
            "id": "http_media-http_response-abc-404-application/json-application/xml-application/json",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "code": Object {
                  "type": "string",
                },
                "message": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "code",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Error",
              },
            },
          },
        ],
        "description": "Our shared 404 response.",
        "headers": Array [],
        "id": "http_response-abc-404-application/json-application/xml",
      },
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Validation exception",
        "headers": Array [],
        "id": "http_response-http_operation-abc-put-/pet/{}-405-application/json-application/xml",
      },
    ],
    "security": Array [
      Array [
        Object {
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "http_security-abc-petstore_auth",
          "key": "petstore_auth",
          "type": "oauth2",
        },
      ],
    ],
    "servers": Array [
      Object {
        "id": "http_server-abc-https://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "http_server-abc-http://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Update an existing pet",
    "tags": Array [
      Object {
        "id": "tag-pet",
        "name": "pet",
      },
    ],
  },
]
`;

exports[`oas operation openapi v3 1`] = `
Array [
  Object {
    "description": "",
    "extensions": Object {
      "x-another": Object {
        "property": "value",
      },
      "x-test": true,
    },
    "id": "http_operation-abc-post-/pets",
    "iid": "addPet",
    "method": "post",
    "path": "/pets",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [
              Object {
                "id": "example-http_media-http_request_body-abc-application/json-Dog",
                "key": "Dog",
                "summary": "A dog example",
                "value": Object {
                  "name": "Leo",
                  "photoUrls": Array [],
                },
              },
              Object {
                "externalValue": "https://stoplight.io/pets/cat",
                "id": "example-http_media-http_request_body-abc-application/json-Cat",
                "key": "Cat",
                "summary": "A cat example",
              },
            ],
            "id": "http_media-http_request_body-abc-application/json",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                  "x-stoplight": Object {
                    "explicitProperties": Array [
                      "type",
                      "format",
                    ],
                  },
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Pet",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "http_media-http_request_body-abc-application/xml",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                  "x-stoplight": Object {
                    "explicitProperties": Array [
                      "type",
                      "format",
                    ],
                  },
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Pet",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "http_request_body-abc",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Invalid input",
        "headers": Array [],
        "id": "http_response-http_operation-abc-post-/pets-405",
      },
    ],
    "security": Array [
      Array [
        Object {
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "http_security-abc-petstore_auth",
          "key": "petstore_auth",
          "type": "oauth2",
        },
      ],
    ],
    "servers": Array [
      Object {
        "id": "http_server-abc-https://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "http_server-abc-http://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Add a new pet to the store",
    "tags": Array [
      Object {
        "id": "tag-pet",
        "name": "pet",
      },
    ],
  },
  Object {
    "extensions": Object {},
    "id": "http_operation-abc-get-/pets",
    "method": "get",
    "path": "/pets",
    "request": Object {
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [
        Object {
          "examples": Array [],
          "id": "http_query-abc-skip",
          "name": "skip",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_query-abc-skip-",
            },
          },
          "style": "form",
        },
        Object {
          "examples": Array [],
          "id": "http_query-abc-limit",
          "name": "limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_query-abc-limit-",
            },
          },
          "style": "form",
        },
      ],
    },
    "responses": Array [
      Object {
        "code": "200",
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "http_media-http_response-http_operation-abc-get-/pets-200-*/*",
            "mediaType": "*/*",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {},
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-http_media-http_response-http_operation-abc-get-/pets-200-*/*-",
              },
            },
          },
        ],
        "description": "OK",
        "headers": Array [],
        "id": "http_response-http_operation-abc-get-/pets-200",
      },
    ],
    "security": Array [],
    "servers": Array [
      Object {
        "id": "http_server-abc-https://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "http_server-abc-http://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "List pets",
    "tags": Array [],
  },
  Object {
    "description": "",
    "extensions": Object {},
    "id": "http_operation-abc-put-/pet/{}",
    "iid": "updatePet",
    "method": "put",
    "path": "/pet/{petId}",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [
              Object {
                "id": "example-http_media-http_request_body-abc-application/json-Dog",
                "key": "Dog",
                "summary": "A dog example",
                "value": Object {
                  "name": "Leo",
                  "photoUrls": Array [],
                },
              },
              Object {
                "externalValue": "https://stoplight.io/pets/cat",
                "id": "example-http_media-http_request_body-abc-application/json-Cat",
                "key": "Cat",
                "summary": "A cat example",
              },
            ],
            "id": "http_media-http_request_body-abc-application/json",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                  "x-stoplight": Object {
                    "explicitProperties": Array [
                      "type",
                      "format",
                    ],
                  },
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Pet",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "http_media-http_request_body-abc-application/xml",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                  "x-stoplight": Object {
                    "explicitProperties": Array [
                      "type",
                      "format",
                    ],
                  },
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Pet",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "http_request_body-abc",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [
        Object {
          "examples": Array [],
          "id": "http_path_param-abc-pet-id",
          "name": "petId",
          "required": true,
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_path_param-abc-pet-id-",
            },
          },
          "style": "simple",
        },
      ],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "400",
        "contents": Array [],
        "description": "Invalid ID supplied",
        "headers": Array [],
        "id": "http_response-http_operation-abc-put-/pet/{}-400",
      },
      Object {
        "code": "404",
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "http_media-http_response-abc-404-*/*",
            "mediaType": "*/*",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "code": Object {
                  "type": "string",
                },
                "message": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "code",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Error",
              },
            },
          },
        ],
        "description": "Our shared 404 response.",
        "headers": Array [],
        "id": "http_response-abc-404",
      },
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Validation exception",
        "headers": Array [],
        "id": "http_response-http_operation-abc-put-/pet/{}-405",
      },
    ],
    "security": Array [
      Array [
        Object {
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "http_security-abc-petstore_auth",
          "key": "petstore_auth",
          "type": "oauth2",
        },
      ],
    ],
    "servers": Array [
      Object {
        "id": "http_server-abc-https://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "http_server-abc-http://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Update an existing pet",
    "tags": Array [
      Object {
        "id": "tag-pet",
        "name": "pet",
      },
    ],
  },
]
`;
